# commit-model

./: .gitignore  LICENSE  README.md  dataset-metadata.json  kernel-metadata.json  pyproject.toml  requirements-kaggle.txt
.github/workflows/: push-dataset.yml  trigger-training.yml
configs/: lora_config_kaggle.yaml
notebooks/: train_lora.ipynb
scripts/: chat.py  download_data.py  evaluate.py  generate_sample.py  infer.py  prepare_data.py  train_lora.py  verify_setup.py
src/commit_model/: __init__.py  inference.py  prompts.py  schema.py
